benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_DivMod_ModExpPow2_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_DivMod_ModExpPow2.rs
Time: 2025-09-15 19:22:29

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0424]: expected value, found module `self`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_impl.rs:58:26
   |
56 | exec fn shift_left(s: &[char], n: usize) -> Vec<char>
   |         ---------- this function can't have a `self` parameter
57 |   requires ValidBitString(s@)
58 |   ensures ValidBitString(self@), Str2Int(self@) == Str2Int(s@) * Exp_int(2, n as nat)
   |                          ^^^^ `self` value is a keyword only available in methods with a `self` parameter

error[E0424]: expected value, found module `self`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_impl.rs:58:42
   |
56 | exec fn shift_left(s: &[char], n: usize) -> Vec<char>
   |         ---------- this function can't have a `self` parameter
57 |   requires ValidBitString(s@)
58 |   ensures ValidBitString(self@), Str2Int(self@) == Str2Int(s@) * Exp_int(2, n as nat)
   |                                          ^^^^ `self` value is a keyword only available in methods with a `self` parameter

error[E0424]: expected value, found module `self`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_impl.rs:69:26
   |
67 | fn mul_mod(a: &[char], b: &[char], z: &[char]) -> Vec<char>
   |    ------- this function can't have a `self` parameter
68 |   requires ValidBitString(a@), ValidBitString(b@), ValidBitString(z@), Str2Int(z@) > 1
69 |   ensures ValidBitString(self@), Str2Int(self@) == (Str2Int(a@) * Str2Int(b@)) % Str2Int(z@)
   |                          ^^^^ `self` value is a keyword only available in methods with a `self` parameter

error[E0424]: expected value, found module `self`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_impl.rs:69:42
   |
67 | fn mul_mod(a: &[char], b: &[char], z: &[char]) -> Vec<char>
   |    ------- this function can't have a `self` parameter
68 |   requires ValidBitString(a@), ValidBitString(b@), ValidBitString(z@), Str2Int(z@) > 1
69 |   ensures ValidBitString(self@), Str2Int(self@) == (Str2Int(a@) * Str2Int(b@)) % Str2Int(z@)
   |                                          ^^^^ `self` value is a keyword only available in methods with a `self` parameter

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0424`.

--------------------------------------------------------------------------------

Additional Output:
error[E0424]: expected value, found module `self`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_impl.rs:58:26
   |
56 | exec fn shift_left(s: &[char], n: usize) -> Vec<char>
   |         ---------- this function can't have a `self` parameter
57 |   requires ValidBitString(s@)
58 |   ensures ValidBitString(self@), Str2Int(self@) == Str2Int(s@) * Exp_int(2, n as nat)
   |                          ^^^^ `self` value is a keyword only available in methods with a `self` parameter

error[E0424]: expected value, found module `self`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_impl.rs:58:42
   |
56 | exec fn shift_left(s: &[char], n: usize) -> Vec<char>
   |         ---------- this function can't have a `self` parameter
57 |   requires ValidBitString(s@)
58 |   ensures ValidBitString(self@), Str2Int(self@) == Str2Int(s@) * Exp_int(2, n as nat)
   |                                          ^^^^ `self` value is a keyword only available in methods with a `self` parameter

error[E0424]: expected value, found module `self`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_impl.rs:69:26
   |
67 | fn mul_mod(a: &[char], b: &[char], z: &[char]) -> Vec<char>
   |    ------- this function can't have a `self` parameter
68 |   requires ValidBitString(a@), ValidBitString(b@), ValidBitString(z@), Str2Int(z@) > 1
69 |   ensures ValidBitString(self@), Str2Int(self@) == (Str2Int(a@) * Str2Int(b@)) % Str2Int(z@)
   |                          ^^^^ `self` value is a keyword only available in methods with a `self` parameter

error[E0424]: expected value, found module `self`
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_impl.rs:69:42
   |
67 | fn mul_mod(a: &[char], b: &[char], z: &[char]) -> Vec<char>
   |    ------- this function can't have a `self` parameter
68 |   requires ValidBitString(a@), ValidBitString(b@), ValidBitString(z@), Str2Int(z@) > 1
69 |   ensures ValidBitString(self@), Str2Int(self@) == (Str2Int(a@) * Str2Int(b@)) % Str2Int(z@)
   |                                          ^^^^ `self` value is a keyword only available in methods with a `self` parameter

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0424`.
